contrast errors resolved!

--- a/lesson3/styles/site-plan.css
+++ b/lesson3/styles/site-plan.css
@@ -54,6 +54,7 @@ nav a:hover {
     margin: 30px auto;
     text-align: center;
     font-family: 'Open Sans';
+    color: #FFFFFF;
 }
 
 .colors th {
